Clean up the ejb-binding code
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@554723 13f79535-47bb-0310-9956-ffa450edef68